// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector type snapshot test 1`] = `
<input
  checked={false}
  className="objectlist-table__checkbox"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Selector type snapshot test 2`] = `
<input
  checked={true}
  className="objectlist-table__checkbox"
  onChange={[Function]}
  type="checkbox"
/>
`;
